Bugfix: featured articles - featured images not showing

--- a/unusualbusiness/assets/styles/layout/_l-feature.scss
+++ b/unusualbusiness/assets/styles/layout/_l-feature.scss
@@ -9,7 +9,7 @@
   align-items: stretch;
   justify-content: space-between;
 
-  padding-top: 6px;
+  padding-top: 2px;
 
   @media (max-width: $tablet) {
     padding-top: 0;
